# ai-library-mcp

./: README.md  datastore.py  db.py  docker-compose.yml  main.py  operations.py  pyproject.toml  server.py
data/: 01_library_schema.sql  02_library_seed.sql
docs/: 02_library_analytics_queries.sql.txt
